--- a/Dark theme/index.html
+++ b/Dark theme/index.html
@@ -60,18 +60,13 @@
 
     <section id="home" class="hero">
         <div class="container">
-            <div class="hero-grid">
-                <div class="hero-content">
-                    <h1 class="animated-text">Welcome to <span>TrineIT</span></h1>
-                    <h2>Your Partner in Success</h2>
-                    <p>Achieving our fullest potential in providing sustainable solutions with integrity</p>
-                    <div class="cta-buttons">
-                        <a href="#services" class="btn-primary">Our Services</a>
-                        <a href="#contact" class="btn-secondary">Get in Touch</a>
-                    </div>
-                </div>
-                <div class="hero-illustration">
-                    <img src="images/hero-illustration.svg" alt="TrineIT illustration">
+            <div class="hero-content">
+                <h1 class="animated-text">Welcome to <span>TrineIT</span></h1>
+                <h2>Your Partner in Success</h2>
+                <p>Achieving our fullest potential in providing sustainable solutions with integrity</p>
+                <div class="cta-buttons">
+                    <a href="#services" class="btn-primary">Our Services</a>
+                    <a href="#contact" class="btn-secondary">Get in Touch</a>
                 </div>
             </div>
         </div>
@@ -131,44 +126,28 @@
             <div class="service-cards">
                 <div class="service-card">
                     <div class="service-icon">
-                        <svg width="50" height="50" viewBox="0 0 50 50">
-                            <use href="images/service-icons.svg#enterprise" />
-                            <rect x="2" y="2" width="46" height="46" rx="10" fill="none" stroke="#6a3de8" stroke-width="3"/>
-                            <rect x="15" y="15" width="20" height="20" rx="3" fill="none" stroke="#ff6b6b" stroke-width="3"/>
-                            <circle cx="25" cy="45" r="5" fill="#00b8d4"/>
-                        </svg>
+                        <i class="fas fa-building"></i>
                     </div>
                     <h3>Enterprise Solutions</h3>
                     <p>Tailored strategies to optimize your business operations.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
-                        <svg width="50" height="50" viewBox="0 0 50 50">
-                            <circle cx="25" cy="25" r="23" fill="none" stroke="#6a3de8" stroke-width="3"/>
-                            <path d="M15 25L22 32L35 18" stroke="#ff6b6b" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
+                        <i class="fas fa-check-circle"></i>
                     </div>
                     <h3>Testing Services</h3>
                     <p>Ensuring flawless performance across platforms.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
-                        <svg width="50" height="50" viewBox="0 0 50 50">
-                            <rect x="13" y="5" width="24" height="40" rx="5" fill="none" stroke="#6a3de8" stroke-width="3"/>
-                            <rect x="17" y="10" width="16" height="25" rx="2" fill="none" stroke="#ff6b6b" stroke-width="2"/>
-                            <circle cx="25" cy="40" r="3" fill="#00b8d4"/>
-                        </svg>
+                        <i class="fas fa-mobile-alt"></i>
                     </div>
                     <h3>Mobile Application Development</h3>
                     <p>Creating user-centric mobile experiences.</p>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
-                        <svg width="50" height="50" viewBox="0 0 50 50">
-                            <path d="M25 5L35 15L25 25L15 15L25 5Z" fill="none" stroke="#6a3de8" stroke-width="3"/>
-                            <path d="M25 25L35 35L25 45L15 35L25 25Z" fill="none" stroke="#ff6b6b" stroke-width="3"/>
-                            <circle cx="25" cy="25" r="5" fill="#00b8d4"/>
-                        </svg>
+                        <i class="fas fa-lightbulb"></i>
                     </div>
                     <h3>Strategic Offerings</h3>
                     <p>Innovative approaches to business challenges.</p>
@@ -218,49 +197,28 @@
             <div class="delivery-cards">
                 <div class="delivery-card">
                     <div class="delivery-icon">
-                        <svg width="50" height="50" viewBox="0 0 50 50">
-                            <path d="M25 5L45 20L25 35L5 20L25 5Z" fill="none" stroke="#6a3de8" stroke-width="3"/>
-                            <circle cx="25" cy="20" r="8" fill="none" stroke="#ff6b6b" stroke-width="2"/>
-                            <path d="M25 32V45" stroke="#00b8d4" stroke-width="3" stroke-linecap="round"/>
-                            <circle cx="25" cy="45" r="3" fill="#00b8d4"/>
-                        </svg>
+                        <i class="fas fa-map-marker-alt"></i>
                     </div>
                     <h3>On-Site</h3>
                     <p>Solutions executed at your location for immediate collaboration.</p>
                 </div>
                 <div class="delivery-card">
                     <div class="delivery-icon">
-                        <svg width="50" height="50" viewBox="0 0 50 50">
-                            <rect x="5" y="10" width="40" height="30" rx="5" fill="none" stroke="#6a3de8" stroke-width="3"/>
-                            <path d="M5 20H45" stroke="#ff6b6b" stroke-width="2"/>
-                            <circle cx="15" cy="15" r="2" fill="#00b8d4"/>
-                            <circle cx="25" cy="15" r="2" fill="#00b8d4"/>
-                            <circle cx="35" cy="15" r="2" fill="#00b8d4"/>
-                        </svg>
+                        <i class="fas fa-building"></i>
                     </div>
                     <h3>Off-Site</h3>
                     <p>Services provided through our U.S. office for flexible engagement.</p>
                 </div>
                 <div class="delivery-card">
                     <div class="delivery-icon">
-                        <svg width="50" height="50" viewBox="0 0 50 50">
-                            <circle cx="25" cy="25" r="20" fill="none" stroke="#6a3de8" stroke-width="3"/>
-                            <path d="M15 25H35" stroke="#ff6b6b" stroke-width="3" stroke-linecap="round"/>
-                            <path d="M25 15V35" stroke="#ff6b6b" stroke-width="3" stroke-linecap="round"/>
-                            <circle cx="25" cy="25" r="5" fill="none" stroke="#00b8d4" stroke-width="2"/>
-                        </svg>
+                        <i class="fas fa-sync-alt"></i>
                     </div>
                     <h3>Hybrid</h3>
                     <p>Round-the-clock development with teams across US, UAE, and India.</p>
                 </div>
                 <div class="delivery-card">
                     <div class="delivery-icon">
-                        <svg width="50" height="50" viewBox="0 0 50 50">
-                            <circle cx="25" cy="25" r="20" fill="none" stroke="#6a3de8" stroke-width="3"/>
-                            <path d="M15 30C15 30 20 35 25 35C30 35 35 30 35 30" stroke="#ff6b6b" stroke-width="2" stroke-linecap="round"/>
-                            <path d="M15 20C15 20 20 15 25 15C30 15 35 20 35 20" stroke="#ff6b6b" stroke-width="2" stroke-linecap="round"/>
-                            <circle cx="25" cy="25" r="3" fill="#00b8d4"/>
-                        </svg>
+                        <i class="fas fa-globe"></i>
                     </div>
                     <h3>Off-Shore</h3>
                     <p>Cost-effective solutions from our India office.</p>
