--- a/index.html
+++ b/index.html
@@ -410,19 +410,22 @@
                 <p>Reach out for inquiries or support</p>
             </div>
             <div class="contact-content">
-                <div class="contact-form-container">
+                <div class="contact-form-container" action="https://n8nclass2025.app.n8n.cloud/webhook-test/contact-form" method="POST">
                     <form class="contact-form">
                         <div class="form-group">
-                            <input type="text" placeholder="Full Name" required>
+                            <label for="firstName">First Name:</label><br>
+                            <input type="text" id="firstName" name="firstName" required><br><br>
                         </div>
                         <div class="form-group">
-                            <input type="email" placeholder="Email Address" required>
+                            <label for="lastName">Last Name:</label><br>
+                            <input type="text" id="lastName" name="lastName" required><br><br>
+                        </div>
+                            <label for="email">Email ID:</label><br>
+                            <input type="email" id="email" name="email" required><br><br>
                         </div>
                         <div class="form-group">
-                            <input type="text" placeholder="Subject">
-                        </div>
-                        <div class="form-group">
-                            <textarea placeholder="Your Message" rows="5" required></textarea>
+                            <label for="message">Message:</label><br>
+                            <textarea id="message" name="message" rows="5" required></textarea><br><br>
                         </div>
                         <button type="submit" class="btn-primary">Send Message</button>
                     </form>
