--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                             <input type="text" id="lastName" name="lastName" required><br><br>
                         </div>
                             <label for="email">Email ID:</label><br>
-                            <input type="email" id="email" name="email" required><br><br>
+                            <input type="text" id="email" name="email" required><br><br>
                         </div>
                         <div class="form-group">
                             <label for="message">Message:</label><br>
